objects/Provider_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Cycle_Type__c</fullName>
        <label>Cycle Type</label>
        <picklist>
            <picklistValues>
                <fullName>T - Never Reset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M - Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W - Weekly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>International_allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internet_allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internet allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_amount_per_cycle__c</fullName>
        <label>Max amount per cycle</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_amount_per_day__c</fullName>
        <label>Max amount per day</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_amount_per_transaction__c</fullName>
        <label>Max amount per transaction</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_transactions_per_cycle__c</fullName>
        <label>Max transactions per cycle</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_transactions_per_day__c</fullName>
        <label>Max transactions per day</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Available_Flag__c</fullName>
        <label>Product Available Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>IF(LEFT(TEXT(Cycle_Type__c),1) == &apos;T&apos;, &apos;10000&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Profile_ID__c</fullName>
        <externalId>true</externalId>
        <label>Provider Profile ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Provider Profile</label>
    <nameField>
        <label>Provider Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Profile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>